Fix pictures borders and popup submit visibility

--- a/blocks/form/__submit/form__submit.css
+++ b/blocks/form/__submit/form__submit.css
@@ -12,7 +12,7 @@
     border: 1px #000;
     border-radius: 2px;
     padding: 0;
-    transition: 0.3s;
+    transition: opacity .3s;
 }
 
 .form__submit:hover {
