--- a/blocks/pictures/__item/pictures__item.css
+++ b/blocks/pictures/__item/pictures__item.css
@@ -4,4 +4,6 @@
     flex-direction: column;
     margin: auto;
     position: relative;
+    border-radius: 10px;
+    overflow: hidden;
 }
